--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
         <module>AutomationLayerEmulator</module>
         <module>ServiceEmulator</module>
         <module>Intermediator</module>
-        <module>Jersey1</module>
+        <module>IntermediatorRest</module>
     </modules>
 
     <properties>
@@ -29,18 +29,8 @@
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-api</artifactId>
-            <version>1.7.5</version>
-        </dependency>
-        <dependency>
-            <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.5</version>
-        </dependency>
-        <dependency>
-            <groupId>com.microsoft.sqlserver</groupId>
-            <artifactId>mssql-jdbc</artifactId>
-            <version>7.2.0.jre8</version>
         </dependency>
     </dependencies>
 
