--- a/IntermediatorRest/web/WEB-INF/web.xml
+++ b/IntermediatorRest/web/WEB-INF/web.xml
@@ -9,7 +9,7 @@
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>jersey.config.server.provider.packages</param-name>
-            <param-value>dk.nielshvid.ffu</param-value>
+            <param-value>dk.nielshvid.IntermediatorRest</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
