--- a/Intermediator/pom.xml
+++ b/Intermediator/pom.xml
@@ -37,6 +37,11 @@
             <version>2.8.10</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
     </dependencies>
 
     <properties>
