--- a/StorageManagement/pom.xml
+++ b/StorageManagement/pom.xml
@@ -11,8 +11,35 @@
 
     <artifactId>StorageManagement</artifactId>
 
-    <dependencies>
+    <!--MUST HAVE FOR TOMCAT SERVER-->
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.glassfish.jersey</groupId>
+                <artifactId>jersey-bom</artifactId>
+                <version>${jersey.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
+    <dependencies>
+        <dependency>
+            <!--MUST HAVE FOR TOMCAT SERVER-->
+            <groupId>org.glassfish.jersey.containers</groupId>
+            <artifactId>jersey-container-servlet-core</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.5</version>
+        </dependency>
     </dependencies>
+
+    <properties>
+        <!--MUST HAVE FOR TOMCAT SERVER-->
+        <jersey.version>2.23.2</jersey.version>
+    </properties>
 
 </project>
