--- a/PInt example/web/WEB-INF/web.xml
+++ b/PInt example/web/WEB-INF/web.xml
@@ -5,7 +5,7 @@
          version="4.0">
 
     <servlet>
-        <servlet-name>Intermediator</servlet-name>
+        <servlet-name>Pint</servlet-name>
         <servlet-class>org.glassfish.jersey.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>jersey.config.server.provider.packages</param-name>
@@ -15,7 +15,7 @@
     </servlet>
 
     <servlet-mapping>
-        <servlet-name>Intermediator</servlet-name>
+        <servlet-name>Pint</servlet-name>
 
         <url-pattern>/*</url-pattern>
 
